[gd_scene load_steps=9 format=2]

[ext_resource path="res://Script/Player.gd" type="Script" id=1]
[ext_resource path="res://Audio/Powerup3.wav" type="AudioStream" id=2]
[ext_resource path="res://Audio/Powerup2.wav" type="AudioStream" id=3]
[ext_resource path="res://Audio/Powerup.wav" type="AudioStream" id=4]
[ext_resource path="res://Audio/Random.wav" type="AudioStream" id=5]
[ext_resource path="res://Audio/Running.mp3" type="AudioStream" id=6]

[sub_resource type="CapsuleShape" id=3]
radius = 0.938049
height = 0.535434

[sub_resource type="CapsuleMesh" id=2]

[node name="Player" type="KinematicBody" groups=["player"]]
script = ExtResource( 1 )
speed = 100

[node name="Player_Collision" type="CollisionShape" parent="."]
transform = Transform( 1.08018, 0, -5.42628e-08, -4.72161e-08, 1.91069e-15, -1.24139, 0, 1, 2.3719e-15, 0, 0, 0 )
shape = SubResource( 3 )

[node name="Head" type="Spatial" parent="."]
unique_name_in_owner = true
transform = Transform( 1, 0, 0, 0, 0.999848, -0.0174524, 0, 0.0174524, 0.999848, 0, 0.697886, 0 )

[node name="Camera" type="Camera" parent="Head"]
transform = Transform( 1, 0, 0, 0, 0.976724, 0.214497, 0, -0.214497, 0.976724, -0.0147343, 0.68505, -0.339374 )
far = 1200.0

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.227273, -0.973831, -0.00108057, 0.0140807, 0.00217666, 0.999898, -0.973729, -0.227265, 0.0142069, 0, 0, 0 )
mesh = SubResource( 2 )

[node name="jumpTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="jump_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -10.0

[node name="jump_power" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="speed_power" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="time_end" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="walking" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -5.0
pitch_scale = 1.14

[connection signal="timeout" from="jumpTimer" to="." method="_on_jumpTimer_timeout"]
